--- a/chat_room/index.html
+++ b/chat_room/index.html
@@ -13,6 +13,7 @@
 <header>
     <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
         <a class="navbar-brand" href="index.html">Home</a>
+        <a class="navbar-brand" href="html/SignIn.html">LOG IN</a>
     </nav>
 </header>
 
