--- a/chat_room/html/SignIn.html
+++ b/chat_room/html/SignIn.html
@@ -20,7 +20,7 @@
             <form>
                 <div class="form-group">
                     <label for="email">Email address</label>
-                    <input type="email" class="form-control" id="email" placeholder="Enter email" required>
+                    <input type="text" class="form-control" id="email" placeholder="Enter email" required>
                 </div>
 
                 <div class="form-group">
