--- a/chat_room/html/SignIn.html
+++ b/chat_room/html/SignIn.html
@@ -17,7 +17,7 @@
             <h2 class="text-center mt-5">Sign In</h2>
 
             <!-- Sign In Form -->
-            <form>
+            <form id="login-form" class="mt-5">
                 <div class="form-group">
                     <label for="email">Email address</label>
                     <input type="text" class="form-control" id="email" placeholder="Enter email" required>
