--- a/chat_room/html/SignIn.html
+++ b/chat_room/html/SignIn.html
@@ -19,13 +19,13 @@
             <!-- Sign In Form -->
             <form id="login-form" class="mt-5">
                 <div class="form-group">
-                    <label for="email">Email address</label>
-                    <input type="text" class="form-control" id="email" placeholder="Enter email" required>
+                    <label for="loginPassword">Email address</label>
+                    <input type="text" class="form-control" id="loginEmail" placeholder="Enter email" required>
                 </div>
 
                 <div class="form-group">
-                    <label for="password">Password</label>
-                    <input type="password" class="form-control" id="password" placeholder="Enter password" required>
+                    <label for="loginPassword">Password</label>
+                    <input type="password" class="form-control" id="loginPassword" placeholder="Enter password" required>
                 </div>
 
                 <button type="submit" class="btn btn-primary btn-block">Sign In</button>
