--- a/chat_room/html/SignIn.html
+++ b/chat_room/html/SignIn.html
@@ -19,7 +19,7 @@
             <!-- Sign In Form -->
             <form id="login-form" class="mt-5">
                 <div class="form-group">
-                    <label for="loginPassword">Email address</label>
+                    <label for="loginEmail">Email address</label>
                     <input type="text" class="form-control" id="loginEmail" placeholder="Enter email" required>
                 </div>
 
