--- a/chat_room/html/SignIn.html
+++ b/chat_room/html/SignIn.html
@@ -20,7 +20,7 @@
             <form id="login-form" class="mt-5">
                 <div class="form-group">
                     <label for="loginEmail">Email address</label>
-                    <input type="text" class="form-control" id="loginEmail" placeholder="Enter email" required>
+                    <input type="email" class="form-control" id="loginEmail" placeholder="Enter email" required>
                 </div>
 
                 <div class="form-group">
