--- a/chat_room/index.html
+++ b/chat_room/index.html
@@ -28,7 +28,7 @@
         <section class="input-group">
             <input type="text" class="form-control" id="message" placeholder="Message" aria-label="Type Message" aria-describedby="basic-addon2">
             <div class="input-group-append">
-                <button class="btn btn-outline-secondary" id="send-button" type="button">&#8618;</button>
+                <button class="btn btn-outline-secondary" id="sendMessageBtn" type="button">&#8618;</button>
             </div>
         </section>
     </section>
