--- a/chat_room/index.html
+++ b/chat_room/index.html
@@ -17,7 +17,14 @@
     </nav>
 </header>
 
-<main>
+<main role="main" class="content">
+    <section class="container chats-container">
+        <ul class="list-group chats">
+            <li class="list-group-item d-flex justify-content-between align-items-center chat"><a>CHAT 1</a></li>
+            <li class="list-group-item d-flex justify-content-between align-items-center chat"><a>CHAT 1</a></li>
+            <li class="list-group-item d-flex justify-content-between align-items-center chat"><a>CHAT 1</a></li>
+        </ul>
+    </section>
     <section class="container message-container">
         <!-- Message Area: Displaying Messages -->
         <section class="message-area overflow-auto" id="message-area">
