--- a/chat_room/html/Chat.html
+++ b/chat_room/html/Chat.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <title>Chat</title>
     <!-- My css -->
-    <link rel="stylesheet" href="./css/style.css">
+    <link rel="stylesheet" href="../css/style.css">
     <!-- Bootstrap css -->
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.4.1/dist/css/bootstrap.min.css" integrity="sha384-Vkoo8x4CGsO3+Hhxv8T/Q5PaXtkKtu6ug5TOeNV6gBiFeWPGFN9MuhOf23Q9Ifjh" crossorigin="anonymous">
 </head>
@@ -23,12 +23,24 @@
         </ul>
     </section>
     <section class="container message-container">
+        <!-- Message Area: Displaying Messages -->
+        <section class="message-area overflow-auto" id="message-area">
+            <!-- Messages will be dynamically added here by JavaScript -->
+        </section>
+
+        <!-- Input Group: For typing and sending messages -->
+        <section class="input-group">
+            <input type="text" class="form-control" id="message" placeholder="Message" aria-label="Type Message" aria-describedby="basic-addon2">
+            <div class="input-group-append">
+                <button class="btn btn-outline-secondary" id="sendMessageBtn" type="button">&#8618;</button>
+            </div>
+        </section>
     </section>
 </main>
 
 <footer></footer>
 
-<script src="js/index.js"></script>
+<script src="../js/chatroom.js"></script>
 <!-- Bootstrap js -->
 <script src="https://code.jquery.com/jquery-3.4.1.slim.min.js" integrity="sha384-J6qa4849blE2+poT4WnyKhv5vZF5SrPo0iEjwBvKU7imGFAV0wwj1yYfoRSJoZ+n" crossorigin="anonymous"></script>
 <script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.0/dist/umd/popper.min.js" integrity="sha384-Q6E9RHvbIyZFJoft+2mJbHaEWldlvI9IOYy5n3zV9zzTtmI3UksdQRVvoxMfooAo" crossorigin="anonymous"></script>
