--- a/chat_room/index.html
+++ b/chat_room/index.html
@@ -17,12 +17,10 @@
     </nav>
 </header>
 
-<main role="main" class="content">
+<main role="main" class="">
     <section class="container chats-container">
         <ul class="list-group chats">
         </ul>
-    </section>
-    <section class="container message-container">
     </section>
 </main>
 
