--- a/chat_room/html/Chat.html
+++ b/chat_room/html/Chat.html
@@ -12,8 +12,8 @@
 
 <header>
     <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
-        <a class="navbar-brand" href="index.html">Home</a>
-        <a class="navbar-brand" href="html/SignIn.html">LOG IN</a>
+        <a class="navbar-brand" href="../index.html">Home</a>
+        <a class="navbar-brand" href="./SignIn.html">LOG IN</a>
     </nav>
 </header>
 
