--- a/chat_room/html/Chat.html
+++ b/chat_room/html/Chat.html
@@ -30,7 +30,7 @@
 
         <!-- Input Group: For typing and sending messages -->
         <section class="input-group">
-            <input type="text" class="form-control" id="message" placeholder="Message" aria-label="Type Message" aria-describedby="basic-addon2">
+            <input type="text" class="form-control" id="messageInput" placeholder="Message" aria-label="Type Message" aria-describedby="basic-addon2">
             <div class="input-group-append">
                 <button class="btn btn-outline-secondary" id="sendMessageBtn" type="button">&#8618;</button>
             </div>
