--- a/chat_room/html/AddUser.html
+++ b/chat_room/html/AddUser.html
@@ -24,6 +24,11 @@
                 </div>
 
                 <div class="form-group">
+                    <label for="email" class="form-text">Username</label>
+                    <input type="text" maxlength="30" class="form-control" id="email" placeholder="Enter username" required>
+                </div>
+
+                <div class="form-group">
                     <label for="password" class="form-text">Password</label>
                     <input type="password" maxlength="100" class="form-control" id="password" placeholder="Enter password" required>
                 </div>
