--- a/chat_room/index.html
+++ b/chat_room/index.html
@@ -21,6 +21,7 @@
     <section class="container chats-container">
         <ul class="list-group chats">
         </ul>
+        <a class="btn btn-outline-dark add-Chat"></a>
     </section>
 </main>
 
