--- a/chat_room/index.html
+++ b/chat_room/index.html
@@ -20,7 +20,7 @@
 <main role="main" class="content">
     <ul class="list-group chats">
     </ul>
-    <a class="btn btn-outline-dark add-Chat">&plus;</a>
+    <a href="html/CreateNewChat.html" class="btn btn-outline-dark add-Chat">&plus;</a>
 
 </main>
 
