--- a/chat_room/html/CreateNewChat.html
+++ b/chat_room/html/CreateNewChat.html
@@ -20,7 +20,7 @@
 <main role="main" class="">
   <div class="row justify-content-center">
     <section class="col-md-6 account-create-form">
-      <h2 class="text-center mt-5">Create Account</h2>
+      <h2 class="text-center mt-5">Create Chat</h2>
 
       <!-- Account Creation Form -->
       <form>
@@ -31,7 +31,7 @@
 
         <div class="form-group">
           <label for="message" class="form-text">Message: </label>
-          <input type="text" class="form-control" id="message" placeholder="Enter password" required>
+          <input type="text" class="form-control" id="message" placeholder="message" required>
         </div>
 
         <button type="submit" class="btn btn-primary btn-block">Send Message</button>
