--- a/chat_room/html/CreateNewChat.html
+++ b/chat_room/html/CreateNewChat.html
@@ -22,7 +22,7 @@
     <section class="col-md-6 account-create-form">
       <h2 class="text-center mt-5">Create Chat</h2>
 
-      <!-- Account Creation Form -->
+      <!-- Chat Creation Form -->
       <form>
         <div class="form-group">
           <label for="otherUser" class="form-text">Other Username</label>
