--- a/chat_room/index.html
+++ b/chat_room/index.html
@@ -19,8 +19,8 @@
 
 <main role="main" class="content">
     <ul class="list-group chats">
+        <li><a href="html/CreateNewChat.html" class="btn btn-outline-dark add-Chat">&plus;</a></li>
     </ul>
-    <a href="html/CreateNewChat.html" class="btn btn-outline-dark add-Chat">&plus;</a>
 
 </main>
 
