--- a/chat_room/html/Chat.html
+++ b/chat_room/html/Chat.html
@@ -20,7 +20,7 @@
 <main role="main" class="content">
     <section class="container chats-container">
         <ul class="list-group chats">
-            <li><a href="./CreateNewChat.html" class="btn btn-outline-dark add-Chat">&plus;</a></li>
+            <li class="list-group-item"><a href="./CreateNewChat.html" class="btn btn-outline-dark add-Chat">&plus;</a></li>
         </ul>
     </section>
     <section class="container message-container">
