--- a/chat_room/index.html
+++ b/chat_room/index.html
@@ -19,7 +19,7 @@
 
 <main role="main" class="content">
     <ul class="list-group chats">
-        <li><a href="html/CreateNewChat.html" class="btn btn-outline-dark add-Chat">&plus;</a></li>
+        <li class="list-group-item"><a href="html/CreateNewChat.html" class="btn btn-outline-dark add-Chat">&plus;</a></li>
     </ul>
 
 </main>
