--- a/chat_room/html/Chat.html
+++ b/chat_room/html/Chat.html
@@ -19,7 +19,7 @@
 
 <main role="main" class="content">
     <section class="container chats-container">
-        <ul class="list-group chats">
+        <ul class="list-group chats overflow-auto">
             <li class="list-group-item"><a href="./CreateNewChat.html" class="btn btn-outline-dark add-Chat">&plus;</a></li>
         </ul>
     </section>
