--- a/chat_room/html/Chat.html
+++ b/chat_room/html/Chat.html
@@ -20,8 +20,8 @@
 <main role="main" class="content">
     <section class="container chats-container">
         <ul class="list-group chats overflow-auto">
-            <li class="list-group-item"><a href="./CreateNewChat.html" class="btn btn-outline-dark add-Chat">&plus;</a></li>
         </ul>
+        <a href="./CreateNewChat.html" class="btn btn-outline-dark add-Chat">&plus;</a>
     </section>
     <section class="container message-container">
         <!-- Message Area: Displaying Messages -->
